# Peregrine

./: .documentation.tex.swp  .travis.yml  README.md  documentation.tex  test.tex
client/: .gitignore  CMakeLists.txt  STM32F429ZI.cmake
client/STMCube/: .mxproject  CMakeLists.txt  STMCube.ioc
client/STMCube/Inc/: FreeRTOSConfig.h  adc.h  can.h  crc.h  dma.h  gpio.h  i2c.h  iwdg.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  system.h  tim.h  usart.h  usbd_cdc_if.h  usbd_conf.h  wwdg.h
client/STMCube/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  spi.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  system.c  tim.c  usart.c  usbd_conf.c  usbd_desc.c  wwdg.c
client/STMCube/startup/: startup_stm32f429xx.s
client/src/: main.c  main.cpp  main.h  main_task.cpp
